d/changelog: Separate unreleased and released changes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20151005) unstable; urgency=medium
+debhelper (9.20151005+unreleased) UNRELEASED; urgency=medium
 
   [ Niels Thykier ]
   * dh_strip: Sort build-ids to make the Build-Ids header
@@ -32,6 +32,16 @@ debhelper (9.20151005) unstable; urgency=medium
   [ Translations ]
   * Update German translation (Chris Leick)
     (Closes: #802198)
+
+ -- Niels Thykier <niels@thykier.net>  Fri, 06 Nov 2015 23:43:39 +0100
+
+debhelper (9.20151005) unstable; urgency=medium
+
+  * dh_strip: Sort build-ids to make the Build-Ids header
+    reproducible.
+  * Dh_Lib.pm: Respect --no-act in autotrigger, thanks to
+    Andreas Henriksson and Helmut Grohne for reporting
+    the issue.  (Closes: #800919)
 
  -- Niels Thykier <niels@thykier.net>  Mon, 05 Oct 2015 08:33:26 +0200
 
