Dh_Lib.pm: first line of d/compat must be a number
This replaces a warning about the contents not being a number and then
debhelper erroring out on compat 1 not being supported.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20151005+unreleased) UNRELEASED; urgency=medium
+debhelper (9.20151101+unreleased) UNRELEASED; urgency=medium
 
   [ Niels Thykier ]
   * dh_strip: Sort build-ids to make the Build-Ids header
@@ -28,6 +28,8 @@ debhelper (9.20151005+unreleased) UNRELEASED; urgency=medium
     (Closes: #800738)
   * dh_installinit: Disable initscripts when a package is
     removed (but not yet purged).  (Closes: #749400)
+  * Dh_Lib.pm: Reject debian/compat files where the first
+    line is not entirely a positive number.
 
   [ Translations ]
   * Update German translation (Chris Leick)
