Update Portuguese translations

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,8 @@ debhelper (9.20151101+unreleased) UNRELEASED; urgency=medium
   [ Translations ]
   * Update German translation (Chris Leick)
     (Closes: #802198)
+  * Update Portuguese translation (Américo Monteiro)
+    (Closes: #804631)
 
  -- Niels Thykier <niels@thykier.net>  Fri, 06 Nov 2015 23:43:39 +0100
 
