--- a/man/po4a/po/pt.po
+++ b/man/po4a/po/pt.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debhelper 9.20151101+unreleased\n"
 "Report-Msgid-Bugs-To: debhelper@packages.debian.org\n"
-"POT-Creation-Date: 2015-11-08 14:33+0100\n"
+"POT-Creation-Date: 2015-11-10 18:17+0100\n"
 "PO-Revision-Date: 2015-11-10 00:07+0000\n"
 "Last-Translator: Américo Monteiro <a_monteiro@gmx.com>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>\n"
@@ -828,7 +828,6 @@ msgstr "v3"
 
 #. type: textblock
 #: debhelper.pod:303
-#| msgid "These are the available compatibility levels:"
 msgid "This is the lowest supported compatibility level."
 msgstr "Este é o nível de compatibilidade mais baixo suportado."
 
@@ -3066,9 +3065,6 @@ msgstr "dh_clean - limpa os directórios de compilação de pacotes"
 
 #. type: textblock
 #: dh_clean:15
-#| msgid ""
-#| "B<dh_clean> [S<I<debhelper options>>] [B<-k>] [B<-d>] [B<-X>I<item>] "
-#| "[S<I<file> ...>]"
 msgid ""
 "B<dh_clean> [S<I<debhelper options>>] [B<-k>] [B<-d>] [B<-X>I<item>] "
 "[S<I<path> ...>]"
@@ -3080,8 +3076,7 @@ msgstr ""
 #: dh_clean:19
 #, no-wrap
 msgid ""
-"B<dh_clean> is a debhelper program that is responsible for cleaning up after "
-"a\n"
+"B<dh_clean> is a debhelper program that is responsible for cleaning up after a\n"
 "package is built. It removes the package build directories, and removes some\n"
 "other files including F<debian/files>, and any detritus left behind by other\n"
 "debhelper commands. It also removes common files that should not appear in a\n"
@@ -3122,7 +3117,6 @@ msgstr "F<debian/clean>"
 
 #. type: textblock
 #: dh_clean:38
-#| msgid "Can list other files to be removed."
 msgid "Can list other paths to be removed."
 msgstr "Pode listar outros caminhos para serem removidos."
 
@@ -3132,8 +3126,8 @@ msgid ""
 "Note directories listed in this file B<must> end with a trailing slash.  Any "
 "content in these directories will be removed as well."
 msgstr ""
-"Note que os directórios listados neste ficheiro B<devem> terminar com "
-"uma barra final. Qualquer conteúdo nestes directórios será também removido."
+"Note que os directórios listados neste ficheiro B<devem> terminar com uma "
+"barra final. Qualquer conteúdo nestes directórios será também removido."
 
 #. type: =item
 #: dh_clean:49 dh_installchangelogs:64
@@ -3178,13 +3172,11 @@ msgstr ""
 
 #. type: =item
 #: dh_clean:64
-#| msgid "I<manpage> ..."
 msgid "I<path> ..."
 msgstr "I<path> ..."
 
 #. type: textblock
 #: dh_clean:66
-#| msgid "Delete these I<file>s too."
 msgid "Delete these I<path>s too."
 msgstr "Apaga estes I<caminho>s também."
 
@@ -3194,8 +3186,8 @@ msgid ""
 "Note directories passed as arguments B<must> end with a trailing slash.  Any "
 "content in these directories will be removed as well."
 msgstr ""
-"Note que os directórios passados como argumentos B<devem> terminar com "
-"uma barra final. Qualquer conteúdo nestes directórios será também removido."
+"Note que os directórios passados como argumentos B<devem> terminar com uma "
+"barra final. Qualquer conteúdo nestes directórios será também removido."
 
 #. type: textblock
 #: dh_compress:5
@@ -7662,12 +7654,10 @@ msgstr ""
 #: dh_strip:99
 #, no-wrap
 msgid ""
-"  dh_strip --ddeb-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<< "
-"2.1-3~)'\n"
+"  dh_strip --ddeb-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<< 2.1-3~)'\n"
 "\n"
 msgstr ""
-"  dh_strip --ddeb-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<< "
-"2.1-3~)'\n"
+"  dh_strip --ddeb-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<< 2.1-3~)'\n"
 "\n"
 
 #. type: =item
