--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,8 @@ debhelper (9.20151101+unreleased) UNRELEASED; urgency=medium
     (Closes: #802198)
   * Update Portuguese translation (Américo Monteiro)
     (Closes: #804631)
+  * Updated french translation (Baptiste Jammet)
+    (Closes: #805218)
 
  -- Niels Thykier <niels@thykier.net>  Fri, 06 Nov 2015 23:43:39 +0100
 
