--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20151101+unreleased) UNRELEASED; urgency=medium
+debhelper (9.20151116) unstable; urgency=medium
 
   [ Niels Thykier ]
   * dh_strip: Sort build-ids to make the Build-Ids header
@@ -39,7 +39,7 @@ debhelper (9.20151101+unreleased) UNRELEASED; urgency=medium
   * Updated french translation (Baptiste Jammet)
     (Closes: #805218)
 
- -- Niels Thykier <niels@thykier.net>  Fri, 06 Nov 2015 23:43:39 +0100
+ -- Niels Thykier <niels@thykier.net>  Mon, 16 Nov 2015 21:05:53 +0100
 
 debhelper (9.20151005) unstable; urgency=medium
 
