Fix typo in dh_clean
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/man/po4a/po/debhelper.pot
+++ b/man/po4a/po/debhelper.pot
@@ -2291,7 +2291,7 @@ msgstr ""
 #. type: textblock
 #: dh_clean:40
 msgid ""
-"Note directories listed in this file B<must> end with a trailing slash.  Any "
+"Note that directories listed in this file B<must> end with a trailing slash.  Any "
 "content in these directories will be removed as well."
 msgstr ""
 
@@ -2343,7 +2343,7 @@ msgstr ""
 #. type: textblock
 #: dh_clean:68
 msgid ""
-"Note directories passed as arguments B<must> end with a trailing slash.  Any "
+"Note that directories passed as arguments B<must> end with a trailing slash.  Any "
 "content in these directories will be removed as well."
 msgstr ""
 
