--- a/man/po4a/po/es.po
+++ b/man/po4a/po/es.po
@@ -3321,7 +3321,7 @@ msgstr "Puede listar otros ficheros que desea eliminar."
 #. type: textblock
 #: dh_clean:40
 msgid ""
-"Note directories listed in this file B<must> end with a trailing slash.  Any "
+"Note that directories listed in this file B<must> end with a trailing slash.  Any "
 "content in these directories will be removed as well."
 msgstr ""
 
@@ -3390,7 +3390,7 @@ msgstr "Borra también estos I<ficheros>."
 #. type: textblock
 #: dh_clean:68
 msgid ""
-"Note directories passed as arguments B<must> end with a trailing slash.  Any "
+"Note that directories passed as arguments B<must> end with a trailing slash.  Any "
 "content in these directories will be removed as well."
 msgstr ""
 
