--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -3421,7 +3421,7 @@ msgstr "Permet d'indiquer d'autres chemins à supprimer."
 #. type: textblock
 #: dh_clean:40
 msgid ""
-"Note directories listed in this file B<must> end with a trailing slash.  Any "
+"Note that directories listed in this file B<must> end with a trailing slash.  Any "
 "content in these directories will be removed as well."
 msgstr ""
 "Veuillez noter que les répertoires indiqués dans ce fichier B<doivent> se "
@@ -3489,7 +3489,7 @@ msgstr "Supprime également les I<chemin>s listés."
 #. type: textblock
 #: dh_clean:68
 msgid ""
-"Note directories passed as arguments B<must> end with a trailing slash.  Any "
+"Note that directories passed as arguments B<must> end with a trailing slash.  Any "
 "content in these directories will be removed as well."
 msgstr ""
 "Veuillez noter que les répertoires passés comme arguments B<doivent> se "
