--- a/man/po4a/po/pt.po
+++ b/man/po4a/po/pt.po
@@ -3123,7 +3123,7 @@ msgstr "Pode listar outros caminhos para serem removidos."
 #. type: textblock
 #: dh_clean:40
 msgid ""
-"Note directories listed in this file B<must> end with a trailing slash.  Any "
+"Note that directories listed in this file B<must> end with a trailing slash.  Any "
 "content in these directories will be removed as well."
 msgstr ""
 "Note que os directórios listados neste ficheiro B<devem> terminar com uma "
@@ -3183,7 +3183,7 @@ msgstr "Apaga estes I<caminho>s também."
 #. type: textblock
 #: dh_clean:68
 msgid ""
-"Note directories passed as arguments B<must> end with a trailing slash.  Any "
+"Note that directories passed as arguments B<must> end with a trailing slash.  Any "
 "content in these directories will be removed as well."
 msgstr ""
 "Note que os directórios passados como argumentos B<devem> terminar com uma "
