Updated German translation
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -5,10 +5,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: debhelper 9.20151002\n"
+"Project-Id-Version: debhelper 9.20151101\n"
 "Report-Msgid-Bugs-To: debhelper@packages.debian.org\n"
 "POT-Creation-Date: 2015-11-08 14:33+0100\n"
-"PO-Revision-Date: 2015-10-18 10:37+0100\n"
+"PO-Revision-Date: 2015-11-11 19:55+0100\n"
 "Last-Translator: Chris Leick <c.leick@vollbio.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "Language: de\n"
@@ -838,10 +838,8 @@ msgstr "v3"
 
 #. type: textblock
 #: debhelper.pod:303
-#, fuzzy
-#| msgid "These are the available compatibility levels:"
 msgid "This is the lowest supported compatibility level."
-msgstr "Diese Kompatibilitätsstufen sind verfügbar:"
+msgstr "Dies ist die unterste unterstützte Kompatibilitätsstufe."
 
 #. type: textblock
 #: debhelper.pod:305 debhelper.pod:334
@@ -3113,16 +3111,12 @@ msgstr "dh_clean - räumt die Bauverzeichnisse des Pakets auf"
 
 #. type: textblock
 #: dh_clean:15
-#, fuzzy
-#| msgid ""
-#| "B<dh_clean> [S<I<debhelper options>>] [B<-k>] [B<-d>] [B<-X>I<item>] "
-#| "[S<I<file> ...>]"
 msgid ""
 "B<dh_clean> [S<I<debhelper options>>] [B<-k>] [B<-d>] [B<-X>I<item>] "
 "[S<I<path> ...>]"
 msgstr ""
 "B<dh_clean> [S<I<Debhelper-Optionen>>] [B<-k>] [B<-d>] [B<-X>I<Element>] "
-"[S<I<Datei> …>]"
+"[S<I<Pfad> …>]"
 
 #. type: verbatim
 #: dh_clean:19
@@ -3169,17 +3163,19 @@ msgstr "F<debian/clean>"
 
 #. type: textblock
 #: dh_clean:38
-#, fuzzy
-#| msgid "Can list other files to be removed."
 msgid "Can list other paths to be removed."
-msgstr "kann weitere Dateien auflisten, die zu entfernen sind."
+msgstr "kann weitere Pfade auflisten, die zu entfernen sind."
 
 #. type: textblock
 #: dh_clean:40
+# FIXME s/Note/Note that/
 msgid ""
-"Note directories listed in this file B<must> end with a trailing slash.  Any "
+"Note that directories listed in this file B<must> end with a trailing slash.  Any "
 "content in these directories will be removed as well."
 msgstr ""
+"Beachten Sie, dass Verzeichnisse, die in dieser Datei aufgeführt sind, mit "
+"einem Schrägstrich enden B<müssen>. Der Inhalt dieser Verzeichnisse wird "
+"ebenfalls entfernt."
 
 #. type: =item
 #: dh_clean:49 dh_installchangelogs:64
@@ -3222,24 +3218,24 @@ msgstr ""
 
 #. type: =item
 #: dh_clean:64
-#, fuzzy
-#| msgid "I<manpage> ..."
 msgid "I<path> ..."
-msgstr "I<Handbuchseite> …>"
+msgstr "I<Pfad> …>"
 
 #. type: textblock
 #: dh_clean:66
-#, fuzzy
-#| msgid "Delete these I<file>s too."
 msgid "Delete these I<path>s too."
-msgstr "löscht diese <I<Datei>en ebenfalls."
+msgstr "löscht diese <I<Pfad>e ebenfalls."
 
 #. type: textblock
 #: dh_clean:68
+# FIXME s/Note/Note that/
 msgid ""
-"Note directories passed as arguments B<must> end with a trailing slash.  Any "
+"Note that directories passed as arguments B<must> end with a trailing slash.  Any "
 "content in these directories will be removed as well."
 msgstr ""
+"Beachten Sie, dass Verzeichnisse, die als Argumente übergeben werden, mit "
+"einem Schrägstrich enden B<müssen>. Der Inhalt dieser Verzeichnisse wird "
+"ebenfalls entfernt."
 
 #. type: textblock
 #: dh_compress:5
@@ -4614,10 +4610,6 @@ msgstr "listet Verzeichnisse auf, die in I<Paket> erstellt werden"
 
 #. type: textblock
 #: dh_installdirs:34
-#, fuzzy
-#| msgid ""
-#| "Generally, there is not need to list directories created by the upstream "
-#| "build system or directories needed by other B<debhelper> commands."
 msgid ""
 "Generally, there is no need to list directories created by the upstream "
 "build system or directories needed by other B<debhelper> commands."
