--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (9.20151117) UNRELEASED; urgency=medium
+
+  [ Translations ]
+  * Update German translation (Chris Leick)
+    (Closes: #802198)
+
+ -- Niels Thykier <niels@thykier.net>  Tue, 17 Nov 2015 07:57:04 +0100
+
 debhelper (9.20151116) unstable; urgency=medium
 
   [ Niels Thykier ]
