dh_clean: Work around for cdbs d/compat auto-vivification
cdbs has a feature where it will create debian/compat and set its
contents to 5 if it does not exist (and DH_COMPAT does not exist).

The issue being builds generally call "clean" before "build" and as
such packages relying on this feature now FTBFS.  As they were not
listed as packages in danger (lintian considered them to have compat 5
or greater), we now instate this work around to cater for them.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,12 @@
 debhelper (9.20151117) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
+  * dh_clean: Temporarily interpret the absence of d/compat and
+    DH_COMPAT to mean compat 5.  This is to avoid breaking
+    packages that rely on cdbs to set debian/compat to 5 during
+    the build.  This temporary work around will live until
+    d/compat becomes mandatory.  (Closes: #805404)
+
   [ Translations ]
   * Update German translation (Chris Leick)
     (Closes: #802198)
