--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20151117) UNRELEASED; urgency=medium
+debhelper (9.20151117) unstable; urgency=medium
 
   [ Niels Thykier ]
   * dh_clean: Temporarily interpret the absence of d/compat and
@@ -11,7 +11,7 @@ debhelper (9.20151117) UNRELEASED; urgency=medium
   * Update German translation (Chris Leick)
     (Closes: #802198)
 
- -- Niels Thykier <niels@thykier.net>  Tue, 17 Nov 2015 07:57:04 +0100
+ -- Niels Thykier <niels@thykier.net>  Tue, 17 Nov 2015 21:29:17 +0100
 
 debhelper (9.20151116) unstable; urgency=medium
 
