Revert "dh_installinit: Disable init scripts on removal"
This reverts commit 0f09b1f88b36eeb99d0b7df8ae2702442e03b45f.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ debhelper (9.20151117+unreleased) UNRELEASED; urgency=medium
 
   * dh_compress: Apply patch from Michael Biebl to skip
     compression of .devhelp2 files.  (Closes: #789153)
+  * dh_installinit: Undo "Disable initscripts when a package is
+    removed (but not yet purged)". (Reopens #749400,
+    Closes: #806276)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 21 Nov 2015 00:33:52 +0100
 
