--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20151117+unreleased) UNRELEASED; urgency=medium
+debhelper (9.20151126) unstable; urgency=medium
 
   * dh_compress: Apply patch from Michael Biebl to skip
     compression of .devhelp2 files.  (Closes: #789153)
@@ -6,7 +6,7 @@ debhelper (9.20151117+unreleased) UNRELEASED; urgency=medium
     removed (but not yet purged)". (Reopens #749400,
     Closes: #806276)
 
- -- Niels Thykier <niels@thykier.net>  Sat, 21 Nov 2015 00:33:52 +0100
+ -- Niels Thykier <niels@thykier.net>  Thu, 26 Nov 2015 18:06:06 +0100
 
 debhelper (9.20151117) unstable; urgency=medium
 
