--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20151126+unreleased) UNRELEASED; urgency=medium
+
+  * dh_installinit: Apply patch from Reiner Herrmann to sort
+    temporary files put in postinst.  (Closes: #806392)
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 28 Nov 2015 09:18:02 +0100
+
 debhelper (9.20151126) unstable; urgency=medium
 
   * dh_compress: Apply patch from Michael Biebl to skip
