--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (9.20151126+unreleased) UNRELEASED; urgency=medium
 
   * dh_installinit: Apply patch from Reiner Herrmann to sort
     temporary files put in postinst.  (Closes: #806392)
+  * dh_installinit: Import change from Ubuntu to add /g
+    modifier when substituting the auto-script snippets.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 28 Nov 2015 09:18:02 +0100
 
