dh_*: add /g to more sed replacements in autoscript calls
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ debhelper (9.20151126+unreleased) UNRELEASED; urgency=medium
     temporary files put in postinst.  (Closes: #806392)
   * dh_installinit: Import change from Ubuntu to add /g
     modifier when substituting the auto-script snippets.
+  * dh_*: Add /g when substituting the auto-script snippts in
+    other commands as well.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 28 Nov 2015 09:18:02 +0100
 
