dh_strip: Do not assume Build-Id is present
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ debhelper (9.20151126+unreleased) UNRELEASED; urgency=medium
     modifier when substituting the auto-script snippets.
   * dh_*: Add /g when substituting the auto-script snippts in
     other commands as well.
+  * dh_strip: Do not assume that ELF binaries have a Build-Id.
+    Thanks to Helmut Grohne for spotting this issue.
+    (Closes: #806814)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 28 Nov 2015 09:18:02 +0100
 
