dh_strip: Enable dbgsym generation by default
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,10 @@ debhelper (9.20151126+unreleased) UNRELEASED; urgency=medium
   * dh_strip: Do not assume that ELF binaries have a Build-Id.
     Thanks to Helmut Grohne for spotting this issue.
     (Closes: #806814)
+  * dh_strip: Enable generation of dbgsym packages by default.
+    Thanks to Ansgar Burchardt and Paul Tagliamonte for
+    implementing the DAK side of this feature.
+    (Closes: #510772)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 28 Nov 2015 09:18:02 +0100
 
