--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20151126+unreleased) UNRELEASED; urgency=medium
+debhelper (9.20151219) unstable; urgency=medium
 
   * dh_installinit: Apply patch from Reiner Herrmann to sort
     temporary files put in postinst.  (Closes: #806392)
@@ -14,7 +14,7 @@ debhelper (9.20151126+unreleased) UNRELEASED; urgency=medium
     implementing the DAK side of this feature.
     (Closes: #510772)
 
- -- Niels Thykier <niels@thykier.net>  Sat, 28 Nov 2015 09:18:02 +0100
+ -- Niels Thykier <niels@thykier.net>  Sat, 19 Dec 2015 22:01:53 +0000
 
 debhelper (9.20151126) unstable; urgency=medium
 
