dh_strip.1: Document that dbgsym pkgs are built by default
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20151219+unreleased) UNRELEASED; urgency=medium
+
+  * dh_strip: Document that dbgsym packages are built by
+    default.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 20 Dec 2015 10:30:08 +0000
+
 debhelper (9.20151219) unstable; urgency=medium
 
   * dh_installinit: Apply patch from Reiner Herrmann to sort
