--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20151219+unreleased) UNRELEASED; urgency=medium
+debhelper (9.20151220) unstable; urgency=medium
 
   * dh_strip: Document that dbgsym packages are built by
     default.
@@ -6,7 +6,7 @@ debhelper (9.20151219+unreleased) UNRELEASED; urgency=medium
   * dh_gencontrol: Create debug symbol packages with the same
     component as the original package.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 20 Dec 2015 10:30:08 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 20 Dec 2015 11:59:33 +0000
 
 debhelper (9.20151219) unstable; urgency=medium
 
