dh_installmanpages: Fix call to getpackages
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20151220+unreleased) UNRELEASED; urgency=medium
+
+  * dh_installmanpages: Fix call to getpackages.  Thanks to
+    Niko Tyni for reporting the issue.  (Closes: #808603)
+
+ -- Niels Thykier <niels@thykier.net>  Mon, 21 Dec 2015 13:36:16 +0000
+
 debhelper (9.20151220) unstable; urgency=medium
 
   * dh_strip: Document that dbgsym packages are built by
