d/changelog: Document getpackages() regression got fixed
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ debhelper (9.20151220+unreleased) UNRELEASED; urgency=medium
 
   * dh_installmanpages: Fix call to getpackages.  Thanks to
     Niko Tyni for reporting the issue.  (Closes: #808603)
+  * Dh_Lib.pm: Restore the behaviour of getpackages(), which
+    is slightly different from getpackages('both').  Fixes
+    a regression introduced in 9.20151220.
 
  -- Niels Thykier <niels@thykier.net>  Mon, 21 Dec 2015 13:36:16 +0000
 
