--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20151220+unreleased) UNRELEASED; urgency=medium
+debhelper (9.20151225) unstable; urgency=medium
 
   * dh_installmanpages: Fix call to getpackages.  Thanks to
     Niko Tyni for reporting the issue.  (Closes: #808603)
@@ -6,7 +6,7 @@ debhelper (9.20151220+unreleased) UNRELEASED; urgency=medium
     is slightly different from getpackages('both').  Fixes
     a regression introduced in 9.20151220.
 
- -- Niels Thykier <niels@thykier.net>  Mon, 21 Dec 2015 13:36:16 +0000
+ -- Niels Thykier <niels@thykier.net>  Fri, 25 Dec 2015 14:39:18 +0000
 
 debhelper (9.20151220) unstable; urgency=medium
 
