--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20151225+unreleased) UNRELEASED; urgency=medium
+
+  * Dh_Lib.pm: Pass "-S" to dpkg-parsechangelog when requesting
+    the Version field.
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 26 Dec 2015 20:13:36 +0000
+
 debhelper (9.20151225) unstable; urgency=medium
 
   * dh_installmanpages: Fix call to getpackages.  Thanks to
