--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (9.20151225+unreleased) UNRELEASED; urgency=medium
 
   * Dh_Lib.pm: Pass "-S" to dpkg-parsechangelog when requesting
     the Version field.
+  * Drop compat level 3.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 26 Dec 2015 20:13:36 +0000
 
