--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,16 @@
 debhelper (9.20151225+unreleased) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * Dh_Lib.pm: Pass "-S" to dpkg-parsechangelog when requesting
     the Version field.
   * Drop compat level 3.
   * dh_install: Only fallback to debian/tmp if the given glob
     does not start with debian/tmp.  This should make the
     output on failures less weird.
+
+  [ Dmitry Shachnev ]
+  * dh_install: Fail because of missing files only after processing
+    all file lists for all packages.  (Closes: #488346)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 26 Dec 2015 20:13:36 +0000
 
