--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ debhelper (9.20151225+unreleased) UNRELEASED; urgency=medium
   * dh_install: Only fallback to debian/tmp if the given glob
     does not start with debian/tmp.  This should make the
     output on failures less weird.
+  * autoscripts/*-makeshlibs: Removed, no longer used.
 
   [ Dmitry Shachnev ]
   * dh_install: Fail because of missing files only after processing
