dh_installmenu: Remove unncessary snippets for menu files
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,9 @@ debhelper (9.20151225+unreleased) UNRELEASED; urgency=medium
   * dh_install: Only fallback to debian/tmp if the given glob
     does not start with debian/tmp.  This should make the
     output on failures less weird.
-  * autoscripts/*-makeshlibs: Removed, no longer used.
+  * autoscripts: Remove unused snippets.
+  * dh_installmenu: Stop adding script snippets when installing
+    menu files.  These are handled by a trigger now.
 
   [ Dmitry Shachnev ]
   * dh_install: Fail because of missing files only after processing
