dh_installmenu: Skip maintscripts for non-exec menu files
Regular non-executable files are handled just fine by the menu
trigger, so stop the creating maintainer scripts for them.

Bonus info: There is currently only 1 executable menu file in the
archive and it does not need the maintscript either.  Nor does it have
one (because it does not use debhelper to install it).

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ debhelper (9.20151225+unreleased) UNRELEASED; urgency=medium
     does not start with debian/tmp.  This should make the
     output on failures less weird.
   * autoscripts/*-makeshlibs: Removed, no longer used.
+  * dh_installmenu: Do not add post{rm,inst} snippets for
+    /non-executable/ menu files.  The trigger in the menu package
+    can handle these correctly.  (Closes: #628564)
 
   [ Dmitry Shachnev ]
   * dh_install: Fail because of missing files only after processing
