--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ debhelper (9.20151225+unreleased) UNRELEASED; urgency=medium
     does not start with debian/tmp.  This should make the
     output on failures less weird.
   * autoscripts/*-makeshlibs: Removed, no longer used.
+  * dh: In compat 10, drop the manual sequence control arguments
+    and the sequence log files.  (Closes: #510855)
 
   [ Dmitry Shachnev ]
   * dh_install: Fail because of missing files only after processing
