dh_installinit: Add tmpfiles.d to the NOOP rule
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ debhelper (9.20151225+unreleased) UNRELEASED; urgency=medium
     (Closes: #733045)
   * d/control: Add dependency on autotools-dev for the new
     dh_update_autotools_config tool.
+  * dh_installinit: Correct the "PROMISE NOOP" clause to account
+    for /etc/tmpfiles.d and /usr/lib/tmpfiles.d.
 
   [ Dmitry Shachnev ]
   * dh_install: Fail because of missing files only after processing
