dh_compile_manifest: New helper tool
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,9 @@ debhelper (9.20151225+unreleased) UNRELEASED; urgency=medium
     dh_update_autotools_config tool.
   * dh_installinit: Correct the "PROMISE NOOP" clause to account
     for /etc/tmpfiles.d and /usr/lib/tmpfiles.d.
+  * dh_compile_manifest: New *experimental* helper to produce
+    mtree-based "manifests" for dpkg.  Currently only enabled in
+    compat 10.
 
   [ Dmitry Shachnev ]
   * dh_install: Fail because of missing files only after processing
