dh_strip: Replace "ddeb" with dbgsym in doc/cmdline options
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,9 @@ debhelper (9.20151225+unreleased) UNRELEASED; urgency=medium
   * dh_compile_manifest: New *experimental* helper to produce
     mtree-based "manifests" for dpkg.  Currently only enabled in
     compat 10.
+  * dh_strip: Add "--(no-)automatic-dbgsym" and "--dbgsym-migration"
+    options to replace "--(no-)ddebs" and "--ddeb-migration".
+    (Closes: #810948)
 
   [ Dmitry Shachnev ]
   * dh_install: Fail because of missing files only after processing
