d/changelog: Set urgency=low
The next upload have some changes where it would not hurt with a bit
of extra testing.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20151225+unreleased) UNRELEASED; urgency=medium
+debhelper (9.20151225+unreleased) UNRELEASED; urgency=low
 
   [ Niels Thykier ]
   * Dh_Lib.pm: Pass "-S" to dpkg-parsechangelog when requesting
