--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20151225+unreleased) UNRELEASED; urgency=low
+debhelper (9.20160114) unstable; urgency=low
 
   [ Niels Thykier ]
   * Dh_Lib.pm: Pass "-S" to dpkg-parsechangelog when requesting
@@ -26,7 +26,7 @@ debhelper (9.20151225+unreleased) UNRELEASED; urgency=low
   * dh_install: Fail because of missing files only after processing
     all file lists for all packages.  (Closes: #488346)
 
- -- Niels Thykier <niels@thykier.net>  Sat, 26 Dec 2015 20:13:36 +0000
+ -- Niels Thykier <niels@thykier.net>  Thu, 14 Jan 2016 22:01:03 +0000
 
 debhelper (9.20151225) unstable; urgency=medium
 
