dh_u_a_c: Exclude all hidden directories in pkg root
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (9.20160114+unreleased) UNRELEASED; urgency=medium
+
+  * Fix brown paper bag bug that caused many packages to
+    FTBFS when dh_update_autotools_config was called.
+    (Closes: #811052)
+
+ -- Niels Thykier <niels@thykier.net>  Fri, 15 Jan 2016 20:01:36 +0000
+
 debhelper (9.20160114) unstable; urgency=low
 
   [ Niels Thykier ]
