Revert "Remove unused makeshlibs autoscripts"
This reverts commit adde59b0f80bacfcfb93d061644d51bbcaca5b05.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ debhelper (9.20160114+unreleased) UNRELEASED; urgency=medium
   * Fix brown paper bag bug that caused many packages to
     FTBFS when dh_update_autotools_config was called.
     (Closes: #811052)
+  * Revert removal of autoscripts/*-makeshlibs.  Some packages
+    injected them directly into their maintainer scripts.
+    (Closes: #811038)
 
  -- Niels Thykier <niels@thykier.net>  Fri, 15 Jan 2016 20:01:36 +0000
 
