--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20160114+unreleased) UNRELEASED; urgency=medium
+debhelper (9.20160115) unstable; urgency=medium
 
   * Fix brown paper bag bug that caused many packages to
     FTBFS when dh_update_autotools_config was called.
@@ -7,7 +7,7 @@ debhelper (9.20160114+unreleased) UNRELEASED; urgency=medium
     injected them directly into their maintainer scripts.
     (Closes: #811038)
 
- -- Niels Thykier <niels@thykier.net>  Fri, 15 Jan 2016 20:01:36 +0000
+ -- Niels Thykier <niels@thykier.net>  Fri, 15 Jan 2016 20:28:37 +0000
 
 debhelper (9.20160114) unstable; urgency=low
 
