Remove dh_suidregister
Last known usage in Debian is in a package that FTBFS.  The
texlive-bin package also have a reference to the tool, but according
the maintainer that invokation does not happen during the Debian
build.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20160116) UNRELEASED; urgency=medium
+
+  * Remove dh_suidregister and related autoscripts.  No package
+    (that can be built in unstable) invokes this tool.
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 16 Jan 2016 13:23:00 +0000
+
 debhelper (9.20160115) unstable; urgency=medium
 
   * Fix brown paper bag bug that caused many packages to
