cross cmake should specify existing compilers
It seems that cross symlinks for $triplet-cc and $triplet-c++ are no
longer generated in the gcc-defaults. Thus switch to the canonical gcc
compiler names.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,8 @@ debhelper (9.20160116) UNRELEASED; urgency=medium
   * dh_installdeb: In compat 10, avoid adding two comments per line
     in the maintscript file.  Thanks to Didier Raboud for
     reporting the bug.  (Closes: #615854)
+  * cmake.pm: Apply patch from Helmut Grohne to correct the
+    name of the default cross compilers.  (Closes: #812136)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 16 Jan 2016 13:23:00 +0000
 
