--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (9.20160116) UNRELEASED; urgency=medium
 
   * Remove dh_suidregister and related autoscripts.  No package
     (that can be built in unstable) invokes this tool.
+  * dh: Do not create stamp files when running with --no-act.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 16 Jan 2016 13:23:00 +0000
 
