dh_auto_configure: Expand ${prefix} uses
Some configure scripts look like generated by autoconf (e.g. MakeKit) but don't
behave exactly the same when expanding the install paths.  For example, when
dh_auto_configure uses "--includedir=${prefix}/include", the "${prefix}" part is
NOT always re-evaluated and, thus, expanded to "/usr".

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -62,6 +62,11 @@ debhelper (10.7) UNRELEASED; urgency=medium
     not to be used correctly.  Use the /g flag so that all instances of the
     substitution variable are handled.  (Closes: #869780)
 
+  [ Isaac Jurado ]
+  * Make the autoconf buildsystem expand "${var}" values send to configure
+    (e.g. pass --mandir=/usr/share/man instead of --mandir=${prefix}/share/man).
+    (Closes: #813266)
+
  -- Niels Thykier <niels@thykier.net>  Sat, 15 Jul 2017 09:42:32 +0000
 
 debhelper (10.6.4) unstable; urgency=medium
