--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ debhelper (9.20160116) UNRELEASED; urgency=medium
     This should avoid adding build-ids to udebs without having
     the actual debug symbols available.  Thanks to Jérémy Bobbio
     for reporting the issue.  (Closes: #812879)
+  * dh_makeshlibs: Do not claim to be using maintainer scripts
+    for invoking ldconfig.  Thanks to Eugene V. Lyubimkin for
+    the report.  (Closes: #815401)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 16 Jan 2016 13:23:00 +0000
 
