Remove dh_scrollkeeper - no longer used in unstable
It has one remaining use in experimental (see #785394)

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/doc/TODO
+++ b/doc/TODO
@@ -15,7 +15,7 @@ Deprecated:
 * dh_undocumented
 * dh_installinit --init-script (make it warn)
 * dh_clean -k
-* dh_desktop, dh_scrollkeeper. Remove eventually..
+* dh_desktop. Remove eventually.
 * -s flag, not formally deprecated yet; remove eventually
 * -u flag; add a warning on use and remove eventually
 * delsubstvar() and the last parameter to addsubstvar that makes it remove
