--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ debhelper (9.20160116) UNRELEASED; urgency=medium
   * dh_makeshlibs: Do not claim to be using maintainer scripts
     for invoking ldconfig.  Thanks to Eugene V. Lyubimkin for
     the report.  (Closes: #815401)
+  * Remove dh_scrollkeeper.  It is no longer used in unstable.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 16 Jan 2016 13:23:00 +0000
 
