dh_installdeb: Fix maintscript shell-escape bug
At the same time, also avoid admitting 2 comments per line in the
maintscript config file (when 2 comment lines in total will do).

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -590,6 +590,13 @@ B<-a>, B<-i>, etc.
 
 =back
 
+=item -
+
+The B<dh_installdeb> command now shell escapes the lines in the
+F<maintscript> config file.  This was the original intend but it did
+not work properly and packages have begun to rely on the incomplete
+shell escaping (e.g. quoting file names).
+
 =back
 
 =back
