addsubstvar: Pass -a to grep to handle substvars with unicode content gracefully (Closes: #815620)
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 debhelper (9.20160116) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * Remove dh_suidregister and related autoscripts.  No package
     (that can be built in unstable) invokes this tool.
   * dh: Do not create stamp files when running with --no-act.
@@ -25,6 +26,10 @@ debhelper (9.20160116) UNRELEASED; urgency=medium
     reporting the bug.  (Closes: #615854)
   * cmake.pm: Apply patch from Helmut Grohne to correct the
     name of the default cross compilers.  (Closes: #812136)
+
+  [ Joachim Breitner ]
+  * addsubstvar: Pass -a to grep to handle substvars with unicode content
+    gracefully (Closes: #815620)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 16 Jan 2016 13:23:00 +0000
 
