--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,9 @@ debhelper (9.20160116) UNRELEASED; urgency=medium
     reporting the bug.  (Closes: #615854)
   * cmake.pm: Apply patch from Helmut Grohne to correct the
     name of the default cross compilers.  (Closes: #812136)
+  * dh_installdeb: Clarify what goes in the "maintscript" config
+    files.  Thanks to Julian Andres Klode for the report.
+    (Closes: #814761)
 
   [ Joachim Breitner ]
   * addsubstvar: Pass -a to grep to handle substvars with unicode content
