dh_compress: Improve path resolution error handling
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,11 @@ debhelper (9.20160116) UNRELEASED; urgency=medium
   * dh_installdeb: Clarify what goes in the "maintscript" config
     files.  Thanks to Julian Andres Klode for the report.
     (Closes: #814761)
+  * dh_compress: Correct and warn if given a path with a package
+    tmp dir prefix (e.g. "debian/<pkg>/path/to/file").
+  * dh_compress: Handle file resolution failures more gracefully.
+    Thanks to Daniel Leidert for reporting this issue.
+    (Closes: #802274)
 
   [ Joachim Breitner ]
   * addsubstvar: Pass -a to grep to handle substvars with unicode content
