dh_installinit: Make -R the default in compat 10
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -597,6 +597,12 @@ F<maintscript> config file.  This was the original intend but it did
 not work properly and packages have begun to rely on the incomplete
 shell escaping (e.g. quoting file names).
 
+=item -
+
+The B<dh_installinit> command now defaults to
+B<--restart-after-upgrade>.  For packages needing the previous
+behaviour, please use B<--no-restart-after-upgrade>.
+
 =back
 
 =back
