--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,9 @@ debhelper (9.20160116) UNRELEASED; urgency=medium
   * dh_compress: Handle file resolution failures more gracefully.
     Thanks to Daniel Leidert for reporting this issue.
     (Closes: #802274)
+  * dh_installinit: Make --restart-after-upgrade the default in
+    compat 10.  Packages can undo this by using the new
+    --no-restart-after-upgrade parameter.
 
   [ Joachim Breitner ]
   * addsubstvar: Pass -a to grep to handle substvars with unicode content
