d/control: Update Vcs links
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,7 @@ debhelper (9.20160116) UNRELEASED; urgency=medium
   * dh_installinit: Make --restart-after-upgrade the default in
     compat 10.  Packages can undo this by using the new
     --no-restart-after-upgrade parameter.
+  * d/control: Update Vcs links.
 
   [ Joachim Breitner ]
   * addsubstvar: Pass -a to grep to handle substvars with unicode content
