d/control: Bump S-V to 3.9.7
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,8 @@ debhelper (9.20160116) UNRELEASED; urgency=medium
     compat 10.  Packages can undo this by using the new
     --no-restart-after-upgrade parameter.
   * d/control: Update Vcs links.
+  * d/control: Bump Standards-Version to 3.9.7 - no changes
+    required.
 
   [ Joachim Breitner ]
   * addsubstvar: Pass -a to grep to handle substvars with unicode content
