New version of the German translations
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,8 @@ debhelper (9.20160116) UNRELEASED; urgency=medium
   * d/control: Update Vcs links.
   * d/control: Bump Standards-Version to 3.9.7 - no changes
     required.
+  * Import newer German translations from Chris Leick.
+    (Closes: #812790)
 
   [ Joachim Breitner ]
   * addsubstvar: Pass -a to grep to handle substvars with unicode content
