--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20160116) UNRELEASED; urgency=medium
+debhelper (9.20160306) unstable; urgency=medium
 
   [ Niels Thykier ]
   * Remove dh_suidregister and related autoscripts.  No package
@@ -47,7 +47,7 @@ debhelper (9.20160116) UNRELEASED; urgency=medium
   * addsubstvar: Pass -a to grep to handle substvars with unicode content
     gracefully (Closes: #815620)
 
- -- Niels Thykier <niels@thykier.net>  Sat, 16 Jan 2016 13:23:00 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 06 Mar 2016 13:14:43 +0000
 
 debhelper (9.20160115) unstable; urgency=medium
 
